fixed spacing of the item-details in item-block

--- a/app/styles/templates/orders/_detail.scss
+++ b/app/styles/templates/orders/_detail.scss
@@ -206,4 +206,9 @@
   .item_details {
     padding: 0 !important;
   }
+
+  .location-name {
+    text-align: center;
+    word-break: break-all;
+  }
 }
